--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vulkan-tools (1.2.141.0~rc2-1ubuntu16.04.1.1) xenial; urgency=medium
+
+  * Automated package build
+
+ -- John Zupin <john@odin>  Thu, 04 Jun 2020 18:30:59 -0600
+
 vulkan-tools (1.2.141.0~rc1-1ubuntu16.04.1.1) xenial; urgency=medium
 
   * Automated package build
