Update changelog for 1.2.154.0-1lunarg20.04-2 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vulkan-tools (1.2.154.0-1lunarg20.04-2) focal; urgency=medium
+
+  * package: update deps version
+
+ -- John Zupin <john@odin>  Wed, 30 Sep 2020 16:50:50 -0600
+
 vulkan-tools (1.2.154.0-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
