--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.2.154.0-1lunarg18.04-4) bionic; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Add more portability macro guards
+
+ -- John Zupin <john@odin>  Fri, 02 Oct 2020 10:05:42 -0600
+
 vulkan-tools (1.2.154.0-1lunarg18.04-3) bionic; urgency=medium
 
   [ richard-lunarg ]
