Update changelog for 1.2.162.0-1lunarg20.04-2 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.2.162.0-1lunarg20.04-2) focal; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix win32 fullscreen pnext chain
+
+ -- John Zupin <john@odin>  Mon, 14 Dec 2020 09:23:05 -0700
+
 vulkan-tools (1.2.162.0-1lunarg20.04-1) focal; urgency=medium
 
   [ richard-lunarg ]
