--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,49 @@
+vulkan-tools (1.2.170.0~rc1-1lunarg18.04-1) bionic; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix win32 fullscreen pnext chain
+
+  [ Joe Hermaszewski ]
+  * Make getTimeInNanoseconds get time in nanoseconds
+
+  [ richard-lunarg ]
+  * Vulkaninfo for iOS devices
+
+  [ Shannon McPherson ]
+  * build: Update known-good files for 1.2.165 header
+
+  [ Richard S. Wright Jr ]
+  * vkcube: Updated to support portability extension properly
+  * Defined VK_ENABLE_BETA_EXTENSIONS so that VK_KHR_PORTABILITY_SUBSET_EXTENSION_NAME would be defined
+  * vkcube: portabilty extension as text so it builds on all platforms
+  * Document Vulkan Info for iOS
+
+  [ Witold Baryluk ]
+  * vkcube: Improve GPU auto-selection
+
+  [ Shannon McPherson ]
+  * build: Update known-good files for 1.2.166 header
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix spelling in FindPhysicalDevices
+
+  [ Nicolas Caramelli ]
+  * vkcube: Add options --width and --height to specify width and height
+
+  [ Tony-LunarG ]
+  * vkcube: Fix compiler warning
+
+  [ Shannon McPherson ]
+  * build: Update known-good files for 1.2.169 header
+
+  [ Mike Schuchardt ]
+  * build: Update known-good files for 1.2.170 header
+
+  [ John Zupin ]
+  * packaging: update control deps version to 170
+
+ -- John Zupin <john@odin>  Mon, 22 Feb 2021 17:59:38 -0700
+
 vulkan-tools (1.2.162.1~rc1-1lunarg18.04-1) bionic; urgency=medium
 
   [ Richard S. Wright Jr ]
