Update changelog for 1.2.170.0~rc2-1lunarg20.04-1 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vulkan-tools (1.2.170.0~rc2-1lunarg20.04-1) focal; urgency=medium
+
+  * packaging: updated LunarG's copyrights
+
+ -- John Zupin <john@odin>  Thu, 25 Feb 2021 14:30:35 -0700
+
 vulkan-tools (1.2.170.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
