--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.2.182.0~rc2-1lunarg18.04-1) bionic; urgency=medium
+
+  [ Bob Ellison ]
+  * windows: updated copyright notices
+
+ -- John Zupin <john@odin>  Fri, 02 Jul 2021 11:57:15 -0600
+
 vulkan-tools (1.2.182.0~rc1-1lunarg18.04-1) bionic; urgency=medium
 
   [ Mike Schuchardt ]
