--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vulkan-tools (1.3.204.0~rc3-1lunarg20.04-1) focal; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Enable portability subset extension if present
+
+  [ Mike Schuchardt ]
+  * vulkaninfo: Enable portability extension for device groups
+
+ -- John Zupin <john@odin>  Fri, 11 Feb 2022 14:40:24 -0700
+
 vulkan-tools (1.3.204.0~rc2-1lunarg20.04-1) focal; urgency=medium
 
   [ Tony-LunarG ]
