--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,47 @@
+vulkan-tools (1.3.209.0~rc1-1lunarg18.04-1) bionic; urgency=medium
+
+  [ Richard S. Wright Jr ]
+  * Updated MoltenVK known good tag to 1.1.7
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.205
+
+  [ Charles Giessen ]
+  * vulkaninfo: Enable portability subset extension if present
+
+  [ Mike Schuchardt ]
+  * vulkaninfo: Enable portability extension for device groups
+
+  [ Jeremy Hayes ]
+  * Make device selection output constistent
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.206
+
+  [ Tony-LunarG ]
+  * build: Add install target for vkcube-wayland
+
+  [ Richard S. Wright Jr ]
+  * Update known_good.json
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.207
+  * build: Update to header 1.3.208
+
+  [ Charles Giessen ]
+  * cubepp: Cleanup usage of C++ and vulkan.hpp
+  * cubepp: Copy cubes swapchain format selection
+  * vkcubepp: Address feedback from code-review
+  * cubepp: Use uint32_t and Demo&
+  * cubepp: Add debug utils messenger
+  * vulkaninfo: Replace devsim with Profile json output
+  * vulkaninfo: Make default json filename unique
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.209
+
+ -- john <john@odin>  Tue, 29 Mar 2022 14:23:06 -0600
+
 vulkan-tools (1.3.204.0~rc3-1lunarg18.04-1) bionic; urgency=medium
 
   [ Charles Giessen ]
