--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+vulkan-tools (1.3.211.0~rc1-1lunarg18.04-1) bionic; urgency=medium
+
+  [ Charles Giessen ]
+  * cubepp: Fix regression in VK_KHR_display
+  * cubepp: Fix wayland regression
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.210
+  * build: Update to header 1.3.211
+
+  [ Loko Kung ]
+  * Factor out typemap_helper header in BUILD rules for reusability in Dawn without depending on entire icd lib.
+
+  [ Md Abdullah Al Fahim ]
+  * Show surface information on GGP platform
+
+  [ John Zupin ]
+  * packaging: update deps versions for vulkan
+
+ -- john <john@odin>  Mon, 11 Apr 2022 13:29:57 -0600
+
 vulkan-tools (1.3.209.0~rc1-1lunarg18.04-1) bionic; urgency=medium
 
   [ Richard S. Wright Jr ]
