--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.211.0~rc2-1lunarg18.04-1) bionic; urgency=medium
+
+  [ Charles Giessen ]
+  * cube,vulkaninfo: Add portability_enumeration if present
+
+ -- john <john@odin>  Wed, 13 Apr 2022 15:19:31 -0600
+
 vulkan-tools (1.3.211.0~rc1-1lunarg18.04-1) bionic; urgency=medium
 
   [ Charles Giessen ]
