--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.211.0~rc3-1lunarg20.04-1) focal; urgency=medium
+
+  [ Charles Giessen ]
+  * docs: Replace references to DevSim with Profiles
+
+ -- john <john@odin>  Fri, 15 Apr 2022 11:12:03 -0600
+
 vulkan-tools (1.3.211.0~rc2-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
