--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+vulkan-tools (1.3.216.0~rc1-1lunarg20.04-1) focal; urgency=medium
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.215
+
+  [ Charles Giessen ]
+  * vulkaninfo: Set sType in PhysDevGroupProps
+  * vkcubepp: Use correct extension for portability enumeration
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.216
+
+ -- john <john@odin>  Thu, 09 Jun 2022 10:21:58 -0600
+
 vulkan-tools (1.3.214.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
