--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.224.0~rc2-1lunarg20.04-1) focal; urgency=medium
+
+  [ John Zupin ]
+  * packaging: update control deps
+
+ -- john <john@odin>  Thu, 18 Aug 2022 14:19:02 -0600
+
 vulkan-tools (1.3.224.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Richard S. Wright Jr ]
