--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.231.0~rc2-1lunarg20.04-1) focal; urgency=medium
+
+  [ Juan Ramos ]
+  * cubepp: Fix presentKHR assert
+
+ -- john <john@odin>  Thu, 20 Oct 2022 14:47:51 -0600
+
 vulkan-tools (1.3.231.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Richard S. Wright Jr ]
