--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.231.0~rc2-1lunarg22.04-1) jammy; urgency=medium
+
+  [ Juan Ramos ]
+  * cubepp: Fix presentKHR assert
+
+ -- john <john@odin>  Thu, 20 Oct 2022 14:49:33 -0600
+
 vulkan-tools (1.3.231.0~rc1-1lunarg22.04-1) jammy; urgency=medium
 
   [ Richard S. Wright Jr ]
