--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,57 @@
+vulkan-tools (1.3.235.0~rc1-1lunarg22.04-1) jammy; urgency=medium
+
+  [ Juan Ramos ]
+  * cubepp: Fix presentKHR assert
+
+  [ Richard S. Wright Jr ]
+  * Updated MoltenVK to 1.2.0
+
+  [ Juan Ramos ]
+  * ci: Use MACOS_DEPLOYMENT_TARGET
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix validation errors
+
+  [ Juan Ramos ]
+  * cmake: Remove outdate code
+  * cmake: Remove USE_CCACHE
+  * docs: Explain CMAKE_EXPORT_COMPILE_COMMANDS
+  * cmake: Suppress Wayland warnings
+  * cmake: Remove illegal CMake code
+
+  [ Mike Schuchardt ]
+  * cmake: Sync FindVulkanHeaders.cmake with VVL
+  * build: Update to header 1.3.232
+
+  [ Charles Giessen ]
+  * vulkaninfo: Escape strings in JSON output
+  * vulkaninfo: Improve array printing
+  * vulkaninfo: Add Driver Version handling
+
+  [ Mike Schuchardt ]
+  * vulkaninfo: Fix VkShaderStageFlagBits expansion
+  * build: Update to header 1.3.233
+
+  [ Simon McVittie ]
+  * build: Compile vkcube and other demos, even when cross-compiling
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.234
+
+  [ Juan Ramos ]
+  * cmake: Use new VulkanHeaders cmake support
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.235
+
+  [ spencer-lunarg ]
+  * icd: Set MockICD driver version to header version
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix quoting strings in json output
+
+ -- john <john@odin>  Thu, 01 Dec 2022 09:18:44 -0700
+
 vulkan-tools (1.3.231.0~rc2-1lunarg22.04-1) jammy; urgency=medium
 
   [ Juan Ramos ]
