--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,48 @@
+vulkan-tools (1.3.239.0~rc1-1lunarg20.04-1) focal; urgency=medium
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.237
+
+  [ Richard S. Wright Jr ]
+  * Updated to latest known good MoltenVK
+
+  [ Mike Schuchardt ]
+  * vulkaninfo: Remove macOS application bundle
+  * ci: Fix macOS github actions codegen verification
+
+  [ Juan Ramos ]
+  * cmake: Use PkgConfig to find XCB
+  * cmake: Use PkgConfig to find X11
+  * cmake: Use PkgConfig to find DirectFB
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.238
+
+  [ Juan Ramos ]
+  * build: Update vulkan headers
+
+  [ Charles Giessen ]
+  * Update README.md to point to LICENSE.md
+
+  [ Jeremy Gebben ]
+  * vkcube: Add more debug utils object names and cb labels
+
+  [ Juan Ramos ]
+  * github: Use main instead of master
+
+  [ John Zupin ]
+  * packaging: debian: update copyright
+
+  [ Charles Giessen ]
+  * vkcube: Fix object type printing in 32 bit mode
+  * cubepp: Make sure width & height are > 0
+  * cube: Check for width & height less are than zero
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.239
+
+ -- john <john@odin>  Mon, 23 Jan 2023 12:38:25 -0700
+
 vulkan-tools (1.3.236.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Mike Schuchardt ]
