--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.239.0~rc2-1lunarg20.04-1) focal; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix rc file copyright and other mistakes
+
+ -- john <john@odin>  Thu, 26 Jan 2023 13:19:52 -0700
+
 vulkan-tools (1.3.239.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Mike Schuchardt ]
