--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.243.0~rc2-1lunarg22.04-1) jammy; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Dont enable Direct Driver Loading Ext
+
+ -- john <john@odin>  Mon, 27 Mar 2023 13:04:33 -0600
+
 vulkan-tools (1.3.243.0~rc1-1lunarg22.04-1) jammy; urgency=medium
 
   [ Mike Schuchardt ]
