--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vulkan-tools (1.3.261.0~rc2-1lunarg22.04-1) jammy; urgency=medium
+
+  [ Charles Giessen ]
+  * vulkaninfo: Make -j=<GPU> work
+
+ -- john <john@odin>  Mon, 21 Aug 2023 11:59:46 -0600
+
 vulkan-tools (1.3.261.0~rc1-1lunarg22.04-1) jammy; urgency=medium
 
   [ Marijn Suijten ]
