--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,34 @@
+vulkan-tools (1.3.275.0~rc1-1lunarg20.04-1) focal; urgency=medium
+
+  [ Daniel Rakos ]
+  * vulkaninfo: API parameterization changes
+
+  [ Charles Giessen ]
+  * cube: Use volk for all function pointers
+  * cube: Remove debug utils function loading
+
+  [ Juan Ramos ]
+  * Remove -fno-aliasing
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.274
+
+  [ Daniel Rakos ]
+  * icd: Add video support
+
+  [ Juan Ramos ]
+  * Fix MacOS installation of vkcube
+  * Fix vkcubepp installation on MacOS
+  * Check for libvulkan.1.dylib
+
+  [ ziga-lunarg ]
+  * vulkaninfo: Fix promoted structure exceptions
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.275
+
+ -- john <john@odin>  Tue, 09 Jan 2024 13:38:48 -0700
+
 vulkan-tools (1.3.273.0~rc1-1lunarg20.04-1) focal; urgency=medium
 
   [ Richard S. Wright Jr ]
