--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+vulkan-tools (1.3.278.0~rc2-1lunarg20.04-1) focal; urgency=medium
+
+  [ Richard S. Wright Jr ]
+  * Update known_good.json for MoltenVK 1.2.7
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.276
+  * build: Update to header 1.3.277
+
+  [ Daniel Rakos ]
+  * icd: Add AV1 decode support
+
+  [ Charles Giessen ]
+  * vulkaninfo: Fix text output for HostImageCopyPropertiesEXT
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.278
+
+  [ Charles Giessen ]
+  * cube: Add NOMINMAX to compiler defines
+
+ -- john <john@odin>  Wed, 28 Feb 2024 10:55:12 -0700
+
 vulkan-tools (1.3.275.0~rc2-1lunarg20.04-1) focal; urgency=medium
 
   [ Charles Giessen ]
