--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+vulkan-tools (1.3.280.0~rc2-1lunarg22.04-1) jammy; urgency=medium
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.279
+
+  [ Thomas Paine ]
+  * Update linmath to upstream and add degreestoradians definition. This fixes bug in linmath function: quat_mul_vec3
+  * Cast double to float
+  * Cast double to float
+
+  [ Mike Schuchardt ]
+  * build: Update to header 1.3.280
+
+ -- john <john@odin>  Tue, 12 Mar 2024 11:39:08 -0600
+
 vulkan-tools (1.3.278.0~rc2-1lunarg22.04-1) jammy; urgency=medium
 
   [ Richard S. Wright Jr ]
